--- a/client/main.html
+++ b/client/main.html
@@ -3,22 +3,10 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> results}}
-  {{> info}}
+  {{> gifs}}
 </body>
 
-<template name="results">
+<template name="gifs">
+  <button class="get-gifs">Get cats</button>
   {{ result }}
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com">Discussions</a></li>
-  </ul>
 </template>
