Add api enpoint for gifs from user by keyword

--- a/client/main.html
+++ b/client/main.html
@@ -14,6 +14,7 @@
 
 <template name="header">
   <header>
+    <a href="/">Home</a>
     {{> loginButtons }}
     <a href="/u/{{ currentUserId }}">Profile</a>
   </header>
